src/test/deca/syntax/parser/invalid/field_definition_visibility_symbol.deca
// Test parser, déclaration d'une méthode avec une visibilité
// qui est un symbole

class myClass {
    . int x = 12;
}